--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>React App</title>
 
-    <meta name="description" content="Blog app is learning project by Mehul Kothari using Node js,React Js and Medium.It a great place to read and learn from a wide range of Blogs. You can write your own thoughts,ideas and share your knowledge and blogs. So why not Start writing today">
+    <meta name="description" content="hivemind games join NOW!">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="BlogApp using MERN Stack Technologies">
